--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "koa": "^2.14.1",
     "koa-route": "^3.2.0",
-    "koa-websocket": "^7.0.0"
+    "koa-websocket": "^7.0.0",
+    "ws": "^8.13.0"
   }
 }
